<resources>
    <!-- Name of the application -->
    <string name="app_name">ExerciseTracking</string>

    <!-- API key for Google Map -->
    <string name="google_maps_key_version" templateMergeStrategy="preserve" translatable="false">AIzaSyBNY2zTuTAxmRd5kQq-pagAerr2aKGTKeY</string>

    <!--StartUp fragment strings -->
    <string name="welcome_to_tracker_startup">Welcome to Tracker</string>
    <string name="continue_startup">Continue</string>

    <!--Statistic Fragment Strings -->
    <string name="total_distance">Total Distance</string>
    <string name="distanceStat">5km</string>
    <string name="total_time">Total Time</string>
    <string name="timeStat">01:32:24</string>
    <string name="total_calories_burned">Calories Burned</string>
    <string name="calorStat">10kcal</string>
    <string name="average_speed">Average Speed</string>
    <string name="speedStat">30km/h</string>

    <!--Walking Fragment Strings -->
    <string name="sort_by_walk">Sort by:</string>
    <string-array name="filter_options_walk">
        <item>Date</item>
        <item>Walking Time</item>
        <item>Distance</item>
        <item>Step</item>
    </string-array>
    <!--Running Tracking Fragment Strings -->
    <string name="step_count_title">Step:</string>
    <string name="step_count">0</string>

    <!--Running Fragment Strings -->
    <string name="sort_by_run">Sort by:</string>
    <string-array name="filter_options_run">
        <item>Date</item>
        <item>Running Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
    </string-array>
    <!--Running Tracking Fragment Strings -->
    <string name="run_tracking_time">00:00:00</string>

    <!--Bottom menu strings -->
    <string name="walk_title_bottomNav">Walking</string>
    <string name="run_title_bottomNav">Running</string>
    <string name="stat_title_bottomNav">Stat</string>
    <string name="setting_title_bottomNav">Setting</string>

    <!-- Tracking button strings -->
    <string name="start_button">Start</string>
    <string name="finish_run_button">Finish</string>
    <string name="back_button">Back</string>
    <string name="total_step">Total Steps</string>
    <string name="stepSum">0</string>
    <string name="view_step">View your steps</string>
    <string name="start_run">Start your run</string>
    <string name="cancel_button">Cancel</string>

    <!-- Run list categories strings -->
    <string name="date_act_list">DATE</string>
    <string name="time_act_list">TIME</string>
    <string name="distance_act_list">DISTANCE</string>
    <string name="avgspeed_act_list">AVGSPEED</string>
    <string name="calories_act_list">CALORIES</string>


</resources>