<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/totalCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/calorStat"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/stepTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/totalCaloriesInfo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/totalDistanceInfo"
        android:layout_width="175dp"
        android:layout_height="42dp"
        android:layout_marginStart="4dp"
        android:text="@string/total_distance"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/totalCaloriesInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/totalDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distanceStat"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/totalCalories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/totalDistanceInfo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/stepTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stepSum"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toEndOf="@+id/avgSpeedInfo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/totalCaloriesInfo"
        android:layout_width="187dp"
        android:layout_height="50dp"
        android:layout_marginBottom="48dp"
        android:text="@string/total_calories_burned"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/avgSpeedInfo"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/avgSpeedInfo"
        android:layout_width="168dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="276dp"
        android:text="@string/total_step"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>